--- a/extension.html
+++ b/extension.html
@@ -7,7 +7,7 @@
   <title>Vite + React + TS</title>
 </head>
 <body>
-<div id='root'></div>
-<script type='module' src='/src/main.tsx'></script>
+<div id='extension'></div>
+<script type='module' src='/src/extension.tsx'></script>
 </body>
 </html>
